[gd_scene load_steps=18 format=2]

[ext_resource path="res://Characters/LittleGirl.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Level1.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Characters/Backdrop.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Bird.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/Insects.tscn" type="PackedScene" id=6]
[ext_resource path="res://Backdrop/CloudBack_A.tscn" type="PackedScene" id=7]
[ext_resource path="res://Characters/AttackBird.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/Cloud_A.tscn" type="PackedScene" id=9]
[ext_resource path="res://Characters/Cloud_B.tscn" type="PackedScene" id=10]
[ext_resource path="res://Art/GrassPatch_02.png" type="Texture" id=11]
[ext_resource path="res://Art/GrassPatch_04.png" type="Texture" id=12]
[ext_resource path="res://Art/GrassPatch_01.png" type="Texture" id=13]
[ext_resource path="res://Art/GrassPatch_03.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 792.664, 34.8153 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 80.0251, 4541.3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 93.4907, 4147.73 )

[node name="Level1" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 1222.55 ]
}

[node name="Background" parent="." instance=ExtResource( 4 )]
position = Vector2( 422.102, -3.59613 )

[node name="CloudBack_A" parent="Background" instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 530.983, -3395.58 )
scale = Vector2( 2.01948, 2.01948 )
frame = 4

[node name="LittleGirl" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="LittleGirl"]
current = true
limit_left = -379
limit_right = 1223
limit_bottom = 600
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 20.0
drag_margin_left = 0.6
drag_margin_right = 0.6
drag_margin_bottom = 0.8
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="State" type="Label" parent="LittleGirl"]
visible = false
margin_left = -27.1223
margin_top = -46.6164
margin_right = 12.8777
margin_bottom = -32.6164
rect_scale = Vector2( 1.5, 1.5 )
text = "state"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 526.206, 538.192 )
collision_layer = 8
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Floor"]
visible = false
position = Vector2( -102.809, 0 )
scale = Vector2( 19.8227, 0.910101 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( -104.825, -2.01587 )
shape = SubResource( 1 )

[node name="Obstacles" type="Node2D" parent="."]

[node name="Cloud_A" parent="Obstacles" instance=ExtResource( 9 )]
position = Vector2( 756.929, -5307.32 )
is_grumpy = true

[node name="Cloud_B" parent="Obstacles" instance=ExtResource( 10 )]
position = Vector2( 127.183, -3848.47 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Bird1" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 764.319, 72.0078 )
speed = 200

[node name="Bird2" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 27.6243, -1459.35 )
direction = -1

[node name="Bird3" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 133.251, -1601.69 )

[node name="Insects" parent="Enemies" instance=ExtResource( 6 )]
position = Vector2( 30.2135, -1858.01 )

[node name="AttackBird" parent="Enemies" instance=ExtResource( 8 )]
position = Vector2( 2850.42, -1035.9 )

[node name="Barriers" type="Node2D" parent="."]

[node name="LeftBarrier" type="Area2D" parent="Barriers"]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/LeftBarrier"]
position = Vector2( -621.872, -1010.42 )
shape = SubResource( 2 )

[node name="RightBarrier" type="Area2D" parent="Barriers"]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/RightBarrier"]
position = Vector2( 1494.52, -522.028 )
shape = SubResource( 3 )

[node name="PlayerBlocker" type="StaticBody2D" parent="Barriers"]
collision_layer = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Barriers/PlayerBlocker"]
position = Vector2( -460.238, -4000.61 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Barriers/PlayerBlocker"]
position = Vector2( 1318.52, -3620.96 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_left = 22.3799
margin_top = 22.8204
margin_right = 62.3799
margin_bottom = 62.8204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Velocity X" type="Label" parent="CanvasLayer/UI"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Velocity X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Velocity Y" type="Label" parent="CanvasLayer/UI"]
margin_top = 28.7675
margin_right = 40.0
margin_bottom = 42.7675
rect_scale = Vector2( 1.5, 1.5 )
text = "Velocity Y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fuel" type="Label" parent="CanvasLayer/UI"]
margin_left = 1.19864
margin_top = 56.3363
margin_right = 41.1986
margin_bottom = 70.3363
rect_scale = Vector2( 1.5, 1.5 )
text = "Fuel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cans" type="Label" parent="CanvasLayer/UI"]
margin_top = 79.1106
margin_right = 40.0
margin_bottom = 93.1106
rect_scale = Vector2( 1.5, 1.5 )
text = "Cans"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="CanvasLayer/UI"]
margin_left = 1.34543
margin_top = 101.58
margin_right = 43.3454
margin_bottom = 115.58
rect_scale = Vector2( 1.5, 1.5 )
text = "Health"

[node name="ForegroundGrass" type="Node2D" parent="."]
self_modulate = Color( 0.988235, 0.988235, 0.988235, 1 )
position = Vector2( 424.5, -207.366 )
scale = Vector2( 3, 3 )

[node name="Mid" type="Node2D" parent="ForegroundGrass"]
modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
position = Vector2( 0, -1.00004 )

[node name="Sprite" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -387.709, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite2" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -355.806, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -323.81, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite4" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -291.874, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite5" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -259.938, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite6" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -228.035, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite7" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -196.039, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite8" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -164.103, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite9" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -132.154, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite10" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -100.251, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite11" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -68.2553, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite12" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -36.319, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite13" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( -4.38272, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite14" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 27.5201, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite15" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 59.5159, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite16" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 91.4523, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite25" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 379.169, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite26" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 411.105, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite17" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 123.555, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite18" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 155.458, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite19" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 187.453, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite20" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 219.39, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite21" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 251.326, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite22" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 283.229, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite23" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 315.225, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite24" type="Sprite" parent="ForegroundGrass/Mid"]
position = Vector2( 347.161, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="ForegroundGrass"]
margin_left = -268.0
margin_top = 249.0
margin_right = 276.0
margin_bottom = 302.0
color = Color( 0.196078, 0.466667, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Node2D" parent="ForegroundGrass"]
modulate = Color( 0.662745, 0.662745, 0.662745, 1 )
position = Vector2( -84.8288, -84.3793 )
scale = Vector2( 1.4, 1.4 )

[node name="Sprite27" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -387.471, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite28" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -355.568, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite29" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -323.572, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite30" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -291.636, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite31" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -259.7, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite32" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -227.797, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite33" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -195.801, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite34" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -163.865, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite35" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -131.916, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite36" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -100.013, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite37" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -68.0172, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite38" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -36.0809, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite39" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( -4.14462, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite40" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 27.7582, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite41" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 59.7539, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite42" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 91.6904, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite43" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 379.169, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite44" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 411.105, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite45" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 123.555, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite46" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 155.458, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite47" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 187.453, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite48" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 219.39, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Sprite49" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 251.326, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 13 )

[node name="Sprite50" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 283.229, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[node name="Sprite51" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 315.225, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Sprite52" type="Sprite" parent="ForegroundGrass/Close"]
position = Vector2( 347.161, 232.658 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )
[connection signal="body_entered" from="Barriers/LeftBarrier" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Barriers/RightBarrier" to="." method="_on_body_entered"]
